--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 pip>=21.3
+setuptools>=65.5.0
+wheel>=0.38.0
+cython>=0.29.33
+
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 python-multipart==0.0.6
-spacy==3.6.1
+
+# Use lighter spaCy version to avoid source builds
+spacy==3.4.4
+
 PyMuPDF==1.22.5
 python-docx==0.8.11
 extract-msg==0.29.0
@@ -12,4 +19,4 @@ email-validator==1.3.1
 numpy==1.26.4
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-google-generativeai==0.11.0
+google-generativeai
