--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-pip>=21.3
-setuptools>=65.5.0
-wheel>=0.38.0
-cython>=0.29.33
+pip
+setuptools
+wheel
+cython
 
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-python-multipart==0.0.6
+fastapi
+uvicorn[standard]
+python-multipart
 
 # Use lighter spaCy version to avoid source builds
-spacy==3.4.4
+spacy
 
-PyMuPDF==1.22.5
-python-docx==0.8.11
-extract-msg==0.29.0
-requests==2.31.0
-python-dotenv==1.0.0
-email-validator==1.3.1
-numpy==1.26.4
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
+PyMuPDF
+python-docx
+extract-msg
+requests
+python-dotenv
+email-validator
+numpy
+sentence-transformers
+faiss-cpu
 google-generativeai
