--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 python-multipart==0.0.6
-spacy==3.6.1
+spacy==3.6.1                # Optional: Remove if not used
 PyMuPDF==1.22.5
 python-docx==0.8.11
 extract-msg==0.29.0
@@ -12,3 +12,4 @@ numpy==1.26.4
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 google-generativeai==0.11.0
+torch==2.2.2+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
