--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# CPU-only PyTorch build
-torch==2.1.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+# # CPU-only PyTorch build
+# torch==2.1.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
-# Must be listed AFTER torch
-sentence-transformers==2.2.2
+# # Must be listed AFTER torch
+# sentence-transformers==2.2.2
 
 # Other dependencies
 fastapi==0.95.2
@@ -18,3 +18,7 @@ email-validator==1.3.1
 numpy==1.26.4
 faiss-cpu==1.7.4
 google-generativeai==0.11.0
+langchain==0.0.1
+huggingface_hub==0.0.1
+
+
