--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
-# # CPU-only PyTorch build
-# torch==2.1.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
-
-# # Must be listed AFTER torch
-# sentence-transformers==2.2.2
-
-# Other dependencies
+# Core framework
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
+
+# Multipart file handling
 python-multipart==0.0.6
+
+# NLP and document parsing
 spacy==3.6.1
 PyMuPDF==1.22.5
 python-docx==0.8.11
 extract-msg==0.29.0
+
+# Utilities
 requests==2.31.0
 python-dotenv==1.0.0
 email-validator==1.3.1
 numpy==1.26.4
+
+# FAISS for vector search
 faiss-cpu==1.7.4
+
+# Google Gemini API (official client)
 google-generativeai==0.11.0
+
+# LangChain and embeddings
 langchain==0.0.1
-huggingface_hub==0.0.1
-pip install -U langchain-community
-pip install google-genai
-
-
-
-
+langchain-community>=0.0.24
+huggingface-hub==0.20.3
