--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,19 @@
-# Core framework
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-
-# Multipart file handling
 python-multipart==0.0.6
-
-# NLP and document parsing
 spacy==3.6.1
 PyMuPDF==1.22.5
 python-docx==0.8.11
 extract-msg==0.29.0
-
-# Utilities
 requests==2.31.0
 python-dotenv==1.0.0
 email-validator==1.3.1
 numpy==1.26.4
-
-# FAISS for vector search
 faiss-cpu==1.7.4
 
-# Google Gemini API
-google-genai
+# Pin google-genai to a version that uses pydantic v1.x
+google-genai==0.11.0
 
-# LangChain and remote embeddings
 langchain==0.0.1
 langchain-community>=0.0.24
 huggingface-hub==0.20.3
