--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.95.2
+fastapi[standard]==0.112.0
 uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 spacy==3.6.1
@@ -10,9 +10,10 @@ python-dotenv==1.0.0
 email-validator==1.3.1
 numpy==1.26.4
 faiss-cpu==1.7.4
+pydantic>=2.7.0,<3.0.0
 
 # Pin google-genai to a version that uses pydantic v1.x
-google-genai==0.3.0
+google-genai
 
 
 langchain==0.0.1
