--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi[standard]==0.112.0
 uvicorn[standard]==0.22.0
-python-multipart==0.0.6
+python-multipart
 spacy==3.6.1
 PyMuPDF==1.22.5
 python-docx==0.8.11
