--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ fastapi[standard]==0.112.0
 uvicorn[standard]==0.22.0
 python-multipart
 spacy==3.6.1
-PyMuPDF==1.22.5
-python-docx==0.8.11
-extract-msg==0.29.0
-requests==2.31.0
-python-dotenv==1.0.0
-email-validator==1.3.1
+PyMuPDF
+python-docx
+extract-msg
+requests
+python-dotenv
+email-validator
 numpy==1.26.4
 faiss-cpu==1.7.4
 pydantic>=2.7.0,<3.0.0
