--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,6 @@ pydantic>=2.7.0,<3.0.0
 google-genai
 
 
-langchain==0.0.1
-langchain-community>=0.0.24
-huggingface-hub==0.20.3
+langchain
+langchain-community
+huggingface-hub
